--- a/projectOhora/src/main/webapp/resources/cdn-main/order_detail.css
+++ b/projectOhora/src/main/webapp/resources/cdn-main/order_detail.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Noto+Sans+KR:300,400,500,700&display=swap");
 body, html, :lang(ko) {
     font-family: 'Noto Sans KR', sans-serif;
 }
@@ -544,7 +544,7 @@ li {
     line-height: 43px;
     padding-right: 20px;
     text-align: center;
-    background: url(/ohora/resources/arrow_more.png) no-repeat 115px 13px;
+    background: url("/projectOhora/resources/images/arrow_more.png") no-repeat 115px 13px;
     background-size: 6%;
     background-repeat: no-repeat;
     box-sizing: border-box;
@@ -673,11 +673,12 @@ h4 {
     font-weight: normal;
     background: #eeeeee;
 }
+/* go_top 버튼 */
 #floating {
     position: fixed;
     bottom: 70px;
     right: 55px;
-    z-index: 1000; /* 버튼이 다른 요소 위에 위치하도록 설정 */
+    z-index: 1000;
     cursor: pointer;
 }
 
@@ -688,19 +689,10 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(/ohora/resources/arrow_top.png) no-repeat center center;
+    background: url("/projectOhora/resources/images/arrow_top.png") no-repeat center center;
     background-size: contain;
 }
 
-#floating .go_top:before {
-    content: '';
-    width: 10px;
-    height: 10px;
-    border-top: 2px solid white;
-    border-right: 2px solid white;
-    transform: rotate(-45deg);
-    margin-top: 4px;
-}
 span, a {
     font-family: inherit;
     color: inherit;
