--- a/projectOhora/src/main/webapp/resources/cdn-main/header.css
+++ b/projectOhora/src/main/webapp/resources/cdn-main/header.css
@@ -324,6 +324,7 @@ img {
   position: sticky;
   display: block;
   width: 100%;
+  height: 174px;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   top: 0;
@@ -1128,6 +1129,228 @@ b {
   width: 100%;
   height: 100%;
 }
+
+/* 시훈이형 */
+.footer {
+  background-color: #474747;
+  padding: 20px;
+}
+
+.center_menu {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.company {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bottom {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 60%;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.chat {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.top_left a {
+  margin-right: 50px;
+}
+
+.top_right a {
+  margin-right: 10px;
+}
+
+.top_left a,
+.list,
+.a a,
+.b a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.company p,
+.sub a {
+  color: gray;
+  text-decoration: none;
+}
+
+.c a {
+  color: yellow;
+  text-decoration: none;
+}
+
+.line {
+  width: 65%;
+  margin: 0 auto;
+  border-top: 1px solid #666;
+}
+
+.list {
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.bottom span {
+  margin-right: 100px;
+}
+
+.sub {
+  margin-top: 20px;
+  display: none;
+  transition: 0.5s ease;
+}
+
+/* 재윤 콘텐츠 */
+#ivStyle * {
+  letter-spacing: 0px;
+}
+#contents {
+  min-height: 670px;
+}
+body,
+html,
+:lang(ko) {
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+user agent stylesheet div {
+  display: block;
+  unicode-bidi: isolate;
+}
+
+/* SP_mypage_wrap */
+
+#ivStyle * {
+  letter-spacing: 0px;
+}
+body,
+html,
+:lang(ko) {
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+user agent stylesheet div {
+  display: block;
+  unicode-bidi: isolate;
+}
+
+#SP_mypage_wrap .SP_subSection.large {
+  padding-top: 130px;
+}
+#SP_mypage_wrap .SP_subSection {
+  padding: 60px 0 30px;
+}
+#ivStyle * {
+  letter-spacing: 0px;
+}
+.SP_subSection {
+  padding: 100px 0 30px;
+}
+body,
+html,
+:lang(ko) {
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+user agent stylesheet div {
+  display: block;
+  unicode-bidi: isolate;
+}
+
+.SP_subContHeader .SP_subTitle,
+.SP_subSection .SP_subTitle,
+.SP_subLoginHeader .SP_subTitle {
+  padding: 5px 0;
+  text-align: center;
+  font-size: 30px;
+  text-transform: lowercase;
+}
+body,
+html,
+:lang(ko) {
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+user agent stylesheet h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+
+#ivStyle .SP_subContHeader .SP_subTitle span,
+#ivStyle .SP_subSection .SP_subTitle span,
+#ivStyle .SP_subLoginHeader .SP_subTitle span {
+  min-width: 100%;
+  font-size: 28px;
+  letter-spacing: -2px !important;
+}
+#ivStyle * {
+  letter-spacing: 0px;
+}
+.SP_subContHeader .SP_subTitle span,
+.SP_subSection .SP_subTitle span,
+.SP_subLoginHeader .SP_subTitle span {
+  display: inline-block;
+  position: relative;
+  font-size: 32px;
+  min-width: 1200px;
+  text-transform: lowercase;
+}
+.eng_font,
+.eng_font * {
+  font-family: "Libre Baskerville", "Noto Sans KR", sans-serif !important;
+}
+.eng_font,
+.eng_font * {
+  font-family: "Libre Baskerville", "Noto Sans KR", sans-serif !important;
+}
+:lang(en),
+.eng_font,
+.titleCommon {
+  font-family: "Libre Baskerville", serif !important;
+}
+body,
+html,
+:lang(ko) {
+  font-family: "Noto Sans KR", sans-serif;
+}
+span,
+a {
+  font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+}
+
+/* 콘텐츠 css 밑에 입력 */
+
 
 /* 마우스 호버 */
 
