--- a/projectOhora/src/main/webapp/resources/cdn-main/event.css
+++ b/projectOhora/src/main/webapp/resources/cdn-main/event.css
@@ -4822,9 +4822,9 @@ img {
     content: "";
 }
 
-.common_list_container .items.grid4:not(.swiper-wrapper) > linot(:nth-of-type(4n+3))::before,.common_list_container .items.grid4:not(.swiper-wrapper) > li.filter-chk:not(.n3)::before {
+/* .common_list_container .items.grid4:not(.swiper-wrapper) > linot(:nth-of-type(4n+3))::before,.common_list_container .items.grid4:not(.swiper-wrapper) > li.filter-chk:not(.n3)::before {
     display: none;
-}
+} */
 
 .common_list_container .items.grid4:not(.swiper-wrapper) > li:nth-of-type(4n):not(.filter-chk),.common_list_container .items.grid4:not(.swiper-wrapper) > li.filter-chk.n4 {
     margin-right: 0;
@@ -5446,7 +5446,7 @@ img {
     max-width: 1200px;
     min-width: 1040px;
     margin: 0 auto;
-    .ham_modify -webkit-box-pack: justify;
+/*     .ham_modify -webkit-box-pack: justify; */
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
@@ -5525,7 +5525,7 @@ img {
 
 .ham_modify#fix_position .hd_cate_container .inner > div .big_txt .big_ {
     display: block;
-    .ham_modify margin: 10px 0;
+  /*   ham_modify margin: 10px 0; */
     margin-bottom: 0 !important;
     width: 100%;
     font-size: 20px !important;
