--- a/projectOhora/src/main/webapp/resources/cdn-main/header.css
+++ b/projectOhora/src/main/webapp/resources/cdn-main/header.css
@@ -1060,3 +1060,31 @@ button {
   a {
   color: #000; display: block; font-size: 17px; line-height: 1; margin-bottom: 19px; width: 60%;
 }
+
+button {
+  background: transparent;
+  border: 0;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+span,
+a {
+  font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul,
+li,
+ol,
+dl,
+dt,
+dd {
+  list-style: none;
+}
